--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<canvas id="backc" width=800 height=500></canvas>
 <canvas id="mainc" width=800 height=500></canvas>
+<canvas id="secondc" width=800 height=500></canvas>
+
 <link rel="stylesheet" href="style.css"/>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<script src="library.js"></script>
 <script src="main.js"></script>
 <div id="slider"></div>
